# trading-bot

./: .env.template  Cargo.toml  README.md
src/: api.rs  common.rs  core.rs  lib.rs  main.rs  rest_api.rs
src/spot/: account.rs  general.rs  market_data.rs  mod.rs  trading.rs
