[package]
name = "trading-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
env_logger = "0.11.8"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
